add gateway and discovery service
