# pos-carts/src/main/java/com/micropos/carts/rest/CartController.java
@@ -3,16 +3,24 @@ package com.micropos.carts.rest;
 import com.micropos.carts.mapper.CartMapper;
 import com.micropos.carts.model.Cart;
 import com.micropos.carts.service.CartService;
-import com.micropos.products.api.CartApi;
+import com.micropos.products.api.CartsApi;
 import com.micropos.products.dto.CartDto;
 import com.micropos.products.dto.CheckoutDto;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
-public class CartController implements CartApi {
+@RestController
+@RequestMapping("api")
+public class CartController implements CartsApi {
 
     private final CartMapper cartMapper;
     private final CartService cartService;
+
+    private final Logger logger = LoggerFactory.getLogger(getClass());
 
     public CartController(CartMapper cartMapper, CartService cartService) {
         this.cartMapper = cartMapper;
@@ -22,6 +30,7 @@ public class CartController implements CartApi {
     @Override
     public ResponseEntity<CartDto> getCart() {
         Cart cart = cartService.getCart();
+        logger.info(cart.toString());
         return new ResponseEntity<>(cartMapper.toCartDto(cart), HttpStatus.OK);
     }
 
